--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Jinja2==2.8
 MarkupSafe==0.23
 MySQL-python==1.2.5
 mysqlclient==1.3.7
+psycopg2==2.6.2
 PyMySQL==0.7.9
 SQLAlchemy==1.0.15
 visitor==0.1.3
