--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 click==6.6
 dominate==2.2.1
+dropbox==6.9.0
 Flask==0.11.1
+Flask-Dropbox==0.3
 Flask-Login==0.3.2
 Flask-MySQL==1.4.0
 Flask-MySQLdb==0.2.0
@@ -14,7 +16,11 @@ MySQL-python==1.2.5
 mysqlclient==1.3.7
 psycopg2==2.6.2
 PyMySQL==0.7.9
+requests==2.11.1
+six==1.10.0
 SQLAlchemy==1.0.15
+typing==3.5.2.2
+urllib3==1.18
 visitor==0.1.3
 Werkzeug==0.11.11
 WTForms==2.1
